	appropriate.
	* lib/rubygems/uninstaller.rb:  Call pre/post uninstall hooks as
	appropriate.  Minor refactoring of #uninstall.
	* lib/rubygems/package/tar_reader.rb:  Some OSs raise EINVAL on seek.
	Based on patch in bug #20791 by Neil Wilson.
	* lib/rubygems/specification.rb:  Correctly check for support of
	development dependencies for #to_ruby.  Bug #20778 by Evan Weaver.

2008-06-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb:  Add Gem::ConfigFile constants for
	packagers and implementors to override defaults.
	* test/*:  Fixes to run tests when under test/rubygems/.  Patch by
	Yusuke ENDOH [ruby-core:17353].

2008-06-24  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Cleanup to support
	if-modified-since requests.  pair: Ryan Davis
	* lib/rubygems/indexer:  Force platform to Gem::Platform::RUBY when
	nil or blank.  Fixes various uninstallable gems.

2008-06-24  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems/installer.rb: Fall back on ~/.gem if GEM_HOME is
	not writable.
	* lib/rubygems/install_update_options.rb: Allow --user-install or
	--no-user-install command-line switch to explicitly force whether
	or not ~/.gem should be used.
	* lib/rubygems/remote_fetcher.rb: Use ~/.gem/cache if cache dir is
	not writable.
	* test/gemutilities.rb: Use MockGemUi for all tests.

2008-06-21  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Load specifications from the future.
	Roll back specification version change.
	* lib/rubygems/remote_fetcher.rb:  Reset connection when an HTTP
	server misbehaves.
	* setup.rb:  Fix --destdir for windows.
	* doc/release_notes/rel_1_2_0.rdoc:  Bugs in RubyGems were
	unintentionally added, order bug fixes by importance.
	* lib/rubygems/rubygems_version.rb:  1.2.0.

2008-06-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb:  Improve output when a gem to uninstall
	isn't found.  Bug #20746 reported by Chad Wooley.